tests/algorithms/x/Python/data_structures/binary_tree/serialize_deserialize_binary_tree.out
Traceback (most recent call last):
  File "/workspace/mochi/tests/algorithms/x/Python/data_structures/binary_tree/serialize_deserialize_binary_tree.py", line 94, in <module>
    main()
  File "/workspace/mochi/tests/algorithms/x/Python/data_structures/binary_tree/serialize_deserialize_binary_tree.py", line 87, in main
    root = five_tree()
           ^^^^^^^^^^^
  File "/workspace/mochi/tests/algorithms/x/Python/data_structures/binary_tree/serialize_deserialize_binary_tree.py", line 81, in five_tree
    left_child = Node(value=2, left=Empty(), right=Empty())
                                    ^^^^^^^
TypeError: 'NoneType' object is not callable